# django-dagster

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  tasks.py
.github/workflows/: ci-cd.yml
demo/: README.md  dagster.yaml  db.sqlite3  manage.py  pyproject.toml  workspace.yaml
demo/dagster_jobs/: sample.py
demo/demo/: settings.py  urls.py
demo/demo/management/commands/: setup_demo.py
demo/reports/: admin.py  models.py
demo/reports/migrations/: 0001_initial.py
django_dagster/: __init__.py  admin.py  apps.py  client.py  models.py  urls.py  views.py
django_dagster/migrations/: 0001_initial.py  0002_dagsterrun.py  0003_alter_dagsterjob_options_alter_dagsterrun_options.py  0004_alter_dagsterjob_options.py
django_dagster/templates/django_dagster/: base.html  job_detail.html  job_list.html  run_detail.html  run_list.html  trigger_job.html
tests/: conftest.py  settings.py  test_admin.py  test_client.py  test_models.py  test_views.py
tests/fixtures/: settings.py
