[project]
name = "django-dagster"
version = "0.1.0"
description = "Django plugin for interacting with a Dagster server"
requires-python = ">=3.13"
license = "MIT"
dependencies = [
    "django>=4.2",
    "dagster-graphql",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-django",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
