[project]
name = "django-dagster"
version = "0.1.0"
description = "Django plugin for interacting with a Dagster server"
readme = "README.md"
requires-python = ">=3.10,<3.15"
authors = [
    { name = "Romain Clement", email = "git@romain-clement.net" },
]
keywords = ["django", "dagster", "admin", "pipeline", "orchestration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
license = "Apache-2.0"
dependencies = [
    "django>=4.2",
    "dagster-graphql",
]

[project.urls]
Homepage = "https://github.com/rclement/django-dagster"
Repository = "https://github.com/rclement/django-dagster"
Changelog = "https://github.com/rclement/django-dagster/blob/main/CHANGELOG.md"
Issues = "https://github.com/rclement/django-dagster/issues"

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "pytest-django==4.12.0",
    "ruff==0.15.1",
    "mypy==1.19.1",
    "django-stubs==5.2.9",
    "pip-audit==2.10.0",
    "bandit==1.9.3",
    "invoke==2.2.1",
    "pyyaml==6.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]
strict = true

[[tool.mypy.overrides]]
module = ["dagster_graphql.*", "gql.*", "yaml.*"]
ignore_missing_imports = true

[tool.coverage.run]
omit = ["django_dagster/migrations/*", "django_dagster/urls.py"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if __name__"]

[tool.django-stubs]
strict_settings = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
